# MRSS

./: .gitignore  README.md  main.py  ts.py
bluetooth/: connection.py  demo.py  pair.py  server.py  wlan.py
cbluetooth/: CMakeLists.txt  README.md  main.cpp
cbluetooth/include/: bluetooth.h  cpp_socket_server.h  socket_server.h
cbluetooth/src/: bluetooth.cpp  socket_server.c
medicine/: fetchinfo.py  func_db_cy.py  main.py  sqlite_database.py
text_to_speech/: README.md
text_to_speech/demo/: text2ids.py
text_to_speech/lib/tensorflow_tts/inference/: auto_processor.py
text_to_speech/lib/tensorflow_tts/processor/: __init__.py
tts/: README.md  main.py  sound.py  tts.py  tts.spec
tts/TensorFlowTTS/examples/cpptflite/demo/: main.cpp
tts/TensorFlowTTS/examples/cpptflite/src/: TfliteBase.cpp
tts/TensorFlowTTS/tensorflow_tts/utils/: cleaners.py
tts_on_arm/: .gitignore  README.md
tts_on_arm/src/: MelGenerateTF.h
tts_on_raspberry/: CMakeLists.txt  README.md
tts_on_raspberry/demo/: main.cpp
tts_on_raspberry/lib/tensorflow_tts/inference/: __init__.py
tts_on_raspberry/src/: TfliteBase.h  VocoderTF.h
