cmake_minimum_required(VERSION 3.16)
project(MRSS_bluetooth C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
add_executable(MRSS_bluetooth main.cpp include/socket_server.h src/socket_server.c include/bluetooth.h src/bluetooth.cpp include/cpp_socket_server.h)
find_package(PkgConfig REQUIRED)
pkg_check_modules(deps REQUIRED IMPORTED_TARGET glib-2.0 gio-2.0)
target_link_libraries(MRSS_bluetooth PkgConfig::deps)
target_link_libraries(MRSS_bluetooth bluetooth)
